force-app/main/default/objects/WorkOrderLineItem/fields/EAM_Work_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>EAM_Work_Order_Status__c</fullName>
    <description>This field is used to store the Work Order status from EAM  (e.g. FECO = Field Complete). This is then used to trigger the sending of Costs into the Child Work Order after receiving the status update from EAM.</description>
    <label>EAM Work Order Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>