force-app/main/default/objects/WorkOrderLineItem/fields/Has_Parts__c.field-meta.xml
<CustomField>
    <fullName>Has_Parts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Parts</label>
    <type>Checkbox</type>
</CustomField>