force-app/main/default/objects/WorkOrderLineItem/fields/MSN_AssetName__c.field-meta.xml
<CustomField>
    <fullName>MSN_AssetName__c</fullName>
    <description>This Cross Object Formula is used to show the Name of the related asset in e.g. Flow Data Tables. This is required as Data Table elements otherewise would only show the AssetId as a plain text string instead of the name.</description>
    <formula>IF(NOT(ISBLANK(AssetId)) ,  Asset.Name  , &quot;None&quot;)</formula>
    <label>Asset Name</label>
    <type>Text</type>
</CustomField>