force-app/main/default/objects/WorkOrderLineItem/fields/MSN_Contract__c.field-meta.xml
<CustomField>
    <fullName>MSN_Contract__c</fullName>
    <description>This field is used in the integration to EAM and always needs to be populated when a new work order line record is created ins Salesforce and then sent in the &quot;CreateChildWorkOrder&quot; payload to EAM. It receives its value from the (Root-)Parent Work Order.</description>
    <label>Contract</label>
    <length>20</length>
    <type>Text</type>
</CustomField>