force-app/main/default/objects/WorkOrderLineItem/fields/MSN_EAM_Work_Order_No__c.field-meta.xml
<CustomField>
    <fullName>MSN_EAM_Work_Order_No__c</fullName>
    <description>This field is used in integration to reference the EAM Child Work Order Number sent back from EAM when a new Work Order Line Item record is created in Salesforce.</description>
    <externalId>true</externalId>
    <label>EAM Work Order Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>