force-app/main/default/objects/WorkOrderLineItem/fields/MSN_Root_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>MSN_Root_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to retrieve the &quot;Root Work Order&quot; from the Parent Work Order related to this WOLI. This is populated in in the Flow &quot;Work Order Line Item - Record Triggered Updates&quot; when a new WOLI is created.</description>
    <label>Root Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Child Work Order Line Items</relationshipLabel>
    <relationshipName>Child_Work_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>