force-app/main/default/objects/WorkOrderLineItem/fields/MSN_Work_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>MSN_Work_Line_Number__c</fullName>
    <description>child work order line number</description>
    <displayFormat>WL-{000000}</displayFormat>
    <label>Work Line Number</label>
    <type>AutoNumber</type>
</CustomField>