force-app/main/default/objects/WorkOrderLineItem/fields/MSN_WorkType_Asset_Name__c.field-meta.xml
<CustomField>
    <fullName>MSN_WorkType_Asset_Name__c</fullName>
    <description>This cross object formula concatenates the &quot;Work Type Name&quot; and the &quot;Asset Name&quot; from the Work Type and Asset objects on the Work Order Line Item. This is required as of limitations in Field Service Mobile Flows (no &apos;concatenate&apos; formula available) und used in the Field Service Mobile App to show a combined &quot;Activity Code and Asset Name&quot; as a record choice set picklist for the crew to select before they choose an additional Schedule Item Code on the next screen of the flow &quot;MSN - Field Service Mobile App - Add additional schedule Item Code&quot;</description>
    <formula>WorkType.Name &amp; IF(ISBLANK(AssetId),&quot;&quot;,&quot; (&quot; &amp; (TEXT(Asset.Asset_Type__c) &amp;&quot;, &quot;&amp; Asset.Comp_Key__c &amp;&quot;)&quot;))</formula>
    <label>Work Type and Asset Name</label>
    <type>Text</type>
</CustomField>