force-app/main/default/objects/WorkOrderLineItem/fields/Must_have_Parts__c.field-meta.xml
<CustomField>
    <fullName>Must_have_Parts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Must have Parts</label>
    <type>Checkbox</type>
</CustomField>