force-app/main/default/objects/WorkOrderLineItem/fields/Work_Type_needs_Work_Complete_Review__c.field-meta.xml
<CustomField>
    <fullName>Work_Type_needs_Work_Complete_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Work Type needs Work Complete Review</label>
    <type>Checkbox</type>
</CustomField>